my-apps/media/immich/service-patches.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app.kubernetes.io/component: machine-learning
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
