my-apps/media/immich/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: default
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: server
  ports:
  - name: http
    port: 2283
    targetPort: 2283
    protocol: TCP
  - name: metrics-api
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: metrics-ms
    port: 8082
    targetPort: 8082
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: default
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: machine-learning
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: machine-learning
  ports:
  - name: http
    port: 3003
    targetPort: 3003
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: default
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: valkey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: valkey
  ports:
  - name: valkey
    port: 6379
    targetPort: 6379
    protocol: TCP
